# dspace-reports

./: .gitignore  Pipfile  README.md  database_manager.py  pyproject.toml  requirements.txt  run_collection_indexer.py  run_community_indexer.py  run_cron.py  run_indexer.py  run_item_indexer.py  run_reports.py  run_repository_indexer.py  setup.py
config/: application.yml.sample
dspace_reports/: __init__.py  collection_indexer.py  community_indexer.py  indexer.py  item_indexer.py  repository_indexer.py
lib/: api.py  database.py  email.py  emailer.py  oai.py  output.py  solr.py  util.py
